results/SVCOMP/2-shot/log-assert6-2024_03_18_23_15_03.txt
import java.util.Random;

class assert6 {
    //@ ensures \result >= 0;
    public static void func() {
        int i = new Random().nextInt();

        //@ assert i >= 1000 ==> i >= 1000;
        if (i >= 1000) {
            if (!(i >= 1000)) {
                assert false;
            }
        }
    }
}
/home/max/Documents/JMLGPT/tmp/assert6.java:4: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures \result >= 0;
                 ^
1 error

